# o11y-tester-operator

./: .gitignore  .wokeignore  README.md  charmcraft.yaml  justfile  pyproject.toml  tox.ini  version
.github/: renovate.json5
.github/workflows/: _charm-quality-checks.yaml  _upgrade_product.yaml  charm-pull-request.yaml  cos-lite.yaml  promote.yaml  pull-request.yaml  quality-gates.yaml  release.yaml  secscan.yaml  test.yaml  tiobe-scan.yaml  update-libs.yaml
src/: charm.py
src/o11y_tester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
terraform/: main.tf
tests/features/: silly_calculator.feature
tests/integration/: conftest.py  helpers.py  test_charm_two.py  test_silly_calculator.py
tests/integration/cos-lite/: ca.tf  test_external_tls.py  test_unencrypted.py  test_upgrade_1_to_2.py
tests/terraform/cos-lite/: cos-lite.tf  test_full_tls_encryption.py  test_internal_tls.py  test_upgrade_1_to_2.py
tests/unit/: test_charm.py  test_silly_calculator.py
