# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "o11y-tester"
version = "0.0"  # this is in fact irrelevant
requires-python = "==3.10.*"  # https://packages.ubuntu.com/jammy/python3

dependencies = [
    "ops",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "pytest-bdd",
  "coverage[toml]",
  "ops[testing]",
  # Integration
  "juju",
  "pytest-operator",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "R", "D"]
# Ignore D107 Missing docstring in __init__
ignore = ["W505", "D107", "C901", "N818", "RET504"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103"]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
extraPaths = ["lib"]
pythonVersion = "3.8"
pythonPlatform = "All"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
